# spf_parasitic_reduction

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_flow.py
docs/superpowers/plans/: 2026-06-22-unified-spf-parasitic-flow-implementation-plan.md  2026-06-29-cdl-back-annotation-implementation-plan.md
docs/superpowers/specs/: 2026-06-19-sram-parasitic-toolkit-minimal-engineering-fixes-design.md  2026-06-29-cdl-back-annotation-design.md
examples/: run_sample.py
src/sram_parasitic_toolkit/: __init__.py  cdl_parser.py  dspf_refiner.py  exporters.py  hier_node.py  net_contractor.py  rc_graph.py  spf_to_cdl_mapper.py  sram_semantics.py
src/sram_parasitic_toolkit/kron/: README_Kron_Integration.md  __init__.py  cdl_spice_exporter.py  kron_reducer.py  kron_spice_exporter.py
tests/: test_cdl_parser.py  test_cdl_spice_exporter.py  test_integration_back_annotate.py  test_net_contractor.py  test_smoke.py  test_spf_to_cdl_mapper.py
